syntax = "proto3";

package contentrpc;

option go_package = "./contentrpc";

service ContentService {
  rpc AddContent(AddContentRequest) returns (AddContentResponse);
  rpc UpdateContent(UpdateContentRequest) returns (UpdateContentResponse);
  rpc RemoveContent(RemoveContentRequest) returns (RemoveContentResponse);
  rpc GetContent(GetContentRequest) returns (GetContentResponse);
}

message Content {
  string id = 1;
  string title = 2;
  string author = 3;
  string filepath = 4;
  string recipient_lud16 = 5;
  int64 price = 6;
}

message AddContentRequest { Content content = 1; }

message AddContentResponse { string id = 1; }

message UpdateContentRequest { Content content = 1; }

message UpdateContentResponse { string id = 1; }

message RemoveContentRequest { string id = 1; }

message RemoveContentResponse { string id = 1; }

message GetContentRequest { string id = 1; }

message GetContentResponse { Content content = 1; }
